update landing page ketoan

--- a/css/style_ketoan.css
+++ b/css/style_ketoan.css
@@ -52,6 +52,10 @@
 
 header {
     padding-top: 5.5rem;
+    position: relative;
+    width: 100%;
+    text-align: center;
+    min-height: auto;
 }
 
 .carousel-item {
