--- a/css/style_ketoan.css
+++ b/css/style_ketoan.css
@@ -110,6 +110,7 @@ header {
 }
 
 /* End Info */
+
 /* Start CSS Footer */
 
 .pre-footer {
@@ -160,3 +161,132 @@ footer p,
 @media only screen and (max-width:990px){.box16{margin-bottom:30px}
 }
 /*****************************************/
+
+/*********************** Video PopUp *******************/
+#popup {
+    width:75%;
+    margin:0 auto;
+}
+  
+#popup iframe{
+    width:100%;
+    margin:0 auto;
+  }
+/*******************************************************/
+
+/*********************** CSS Contact *******************/
+#contact {
+    width: 100%;
+    height: 100vh;
+    background-color: #ffffff;
+    overflow: hidden;
+    padding-bottom: 200px;
+}
+
+.section-header {
+    text-align: center;
+    margin: 0 auto;
+    padding-top: 50px;
+    margin-bottom: 50px;
+    font: 300 60px 'Oswald', sans-serif;
+    letter-spacing: 6px;
+    color: rgb(88, 88, 88);
+    margin-bottom: 25px;
+}
+
+.contact-wrapper {
+    margin: 0 auto;
+    padding-top: 20px;
+    position: relative;
+    max-width: 800px;
+}
+
+/* Begin Left Contact Page */
+.form-horizonal {
+    float: left;
+    max-width: 400px;
+    font-family: 400px;
+    font-weight: 400;
+}
+
+.form-control, textarea {
+    max-width: 400px;
+    background-color: #fff;
+    color: #fff;
+    letter-spacing: 1px;
+}
+
+.send-button {
+    margin-top: 15px;
+    height: 34px;
+    width: 400px;
+    overflow: hidden;
+    transition: all .2s ease-in-out;
+}
+
+.button {
+    width: 400px;
+    height: 34px;
+    transition: all .2s ease-in-out;
+}
+
+.send-text {
+    display: block;
+    margin-top: 10px;
+    font: 300 14px 'Lato', sans-serif;
+    letter-spacing: 2px;
+}
+
+.button:hover {
+    transform: translate3d(0px, -29px, 0px);
+}
+
+/* Begin Right Contact Page */
+.direct-contact-container {
+    max-width: 400px;
+    float: right;
+    margin-top: 5px;
+}
+
+/* Location, Phone, Email Section */
+.contact-list {
+    list-style-type: none;
+    margin-left: -30px;
+    padding-right: 20px;
+}
+
+.list-item {
+    line-height: 4;
+    color: #aaa;
+}
+
+.contact-text {
+    font: 300 18px 'Lato', sans-serif;
+    letter-spacing: 1.9px;
+    color: #bbb;
+}
+
+.place {
+    margin-left: 62px;
+}
+
+.phone {
+    margin-left: 56px;
+}
+
+.gmail {
+    margin-left: 53px;
+}
+
+.contact-text a {
+    color: #bbb;
+    text-decoration: none;
+    transition-duration: 0.2s;
+}
+
+.contact-text a:hover {
+    color: #fff;
+    text-decoration: none;
+}
+
+/*******************************************************/
